# starship

./: Cargo.toml
.github/workflows/: deploy.yml  security-audit.yml  workflow.yml
docs/: package-lock.json  package.json
src/: module.rs
src/modules/: mod.rs
