[package]
name = "starship"
version = "0.53.0"
edition = "2018"
authors = ["Matan Kushner <hello@matchai.me>"]
homepage = "https://starship.rs"
documentation = "https://starship.rs/guide/"
repository = "https://github.com/starship/starship"
readme = "README.md"
license = "ISC"
keywords = ["prompt", "shell", "bash", "fish", "zsh"]
categories = ["command-line-utilities"]
build = "build.rs"
description = """
The minimal, blazing-fast, and infinitely customizable prompt for any shell! ☄🌌️
"""
# Keep `/` in front of `README.md` to exclude localized readmes
include = ["src/**/*", "build.rs", "Cross.toml", "LICENSE", "/README.md"]

[badges]
is-it-maintained-issue-resolution = { repository = "starship/starship" }
is-it-maintained-open-issues = { repository = "starship/starship" }
maintenance = { status = "actively-developed" }

[features]
default = []
http = ["attohttpc"]
# Vendor OpenSSL, use this if you have trouble cross-compiling starship
tls-vendored = ["native-tls/vendored"]


[dependencies]
clap = "2.33"
ansi_term = "0.12"
dirs-next = "2.0"
git2 = { version = "0.13", default-features = false }
toml = { version = "0.5", features = ["preserve_order"] }
rust-ini = "0.17"
serde_json = "1.0"
rayon = "1.5"
log = { version = "0.4", features = ["std"] }
# battery is optional (on by default) because the crate doesn't currently build for Termux
# see: https://github.com/svartalf/rust-battery/issues/33
# battery = { version = "0.7", optional = true }
path-slash = "0.1"
unicode-segmentation = "1.7"
gethostname = "0.2"
once_cell = "1.7"
chrono = "0.4"
sys-info = "0.9"
byte-unit = "4.0"
starship_module_config_derive = { version = "0.2", path = "starship_module_config_derive" }
yaml-rust = "0.4"
pest = "2.1"
pest_derive = "2.1"
regex = "1.5"
os_info = "3.0"
urlencoding = "1.3"
open = "1.7"
unicode-width = "0.1"
term_size = "0.3"
quick-xml = "0.22"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version ="1.6", features = ["serde"] }
# notify-rust = { version = "4.4", optional = true }
semver = "1.0.0-rc"
which = "4.1"
shadow-rs = "0.5"
versions = "4.0"
strsim = "0.10"

process_control = { version = "3.0", features = ["crossbeam-channel"] }

# Optional/http:
attohttpc = { version = "0.17", optional = true, default-features = false, features = ["tls", "form"] }
native-tls = { version = "0.2", optional = true }
shell-words = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winuser",
  "securitybaseapi",
  "processthreadsapi",
  "handleapi",
  "impl-default",
] }

[target.'cfg(not(windows))'.dependencies]
nix = "0.20"

[build-dependencies]
shadow-rs = "0.5"

[dev-dependencies]
tempfile = "3.2"

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "starship"
path = "src/main.rs"
